--- a/templates/administration/practice/test_cases.html
+++ b/templates/administration/practice/test_cases.html
@@ -19,10 +19,19 @@ active
                 <span class="fs-4"> | 🔥Total: {{ test_cases.count }}🔥</span>
             </h3>
         </div>
-        <button type="button" class="btn btn-outline-primary button mt-n3 mx-4 m-3" data-bs-toggle="modal"
-            data-bs-target="#addTestCaseModal">
-            Add Test Case
-        </button>
+
+        <div class="row">
+
+            <button type="button" class="btn btn-outline-primary button mt-n3 m-3 col-8" data-bs-toggle="modal"
+                data-bs-target="#addTestCaseModal">
+                Add Test Case
+            </button>
+
+            <a href="{% url 'driver_code' question.slug %}" class="btn btn-outline-warning button mt-n3 m-3 col-3">
+                Driver Code
+            </a>
+
+        </div>
 
     </div>
 
@@ -118,7 +127,7 @@ active
                                         data-title="{{ test_case.input_data }}"
                                         data-description="{{ test_case.expected_output|linebreaksbr }}"
                                         title="{{ test_case.input_data }}">View</button> -->
-                                        {{ test_case.expected_output|linebreaksbr }}
+                                    {{ test_case.expected_output|linebreaksbr }}
                                 </p>
                             </td>
 
@@ -175,12 +184,13 @@ active
                     <div class="modal-body">
                         <div class="mb-3">
                             <label for="inputData" class="form-label">Input Data</label>
-                            <textarea class="form-control" id="inputData" name="input_data" rows="5"
-                                required></textarea>
+                            <textarea class="form-control" id="inputData" placeholder="Enter the input here..."
+                                name="input_data" rows="5" required></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="expectedOutput" class="form-label">Expected Output</label>
-                            <textarea class="form-control" id="expectedOutput" name="expected_output" rows="5"
+                            <textarea class="form-control" id="expectedOutput"
+                                placeholder="Enter the expected output here..." name="expected_output" rows="5"
                                 required></textarea>
                         </div>
                         <div class="form-check">
