--- a/templates/administration/practice/instructor_problems.html
+++ b/templates/administration/practice/instructor_problems.html
@@ -275,7 +275,7 @@ Problem Set🔥
 
                 <td class="border-bottom-0">
                     <div class="d-flex align-items-center gap-2">
-                        <a href=""/administration/test_code/${question.slug}"" class="btn btn-info text-blue float-end">TEST CODE</a>
+                        <a href="/administration/test_code/${question.slug}" class="btn btn-info text-blue float-end">TEST CODE</a>
                     </div>
                 </td>
             `;
