added the quick links on admin side

--- a/templates/practice/problem_set.html
+++ b/templates/practice/problem_set.html
@@ -70,7 +70,7 @@ active
         <div class="card-body p-4">
             <form onsubmit="event.preventDefault();">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="searchInput" placeholder="Search by ID, Topic or Course"
+                    <input type="text" class="form-control" id="searchInput" placeholder="Search by ID, Title or Description"
                         oninput="searchQuestions()" />
                     <button type="button" class="btn btn-outline-danger" id="clearSearchButton">Clear</button>
                 </div>
