--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -376,6 +376,39 @@ Administration -> Home
 
     <!-- ================================= Schedule ====================================== -->
 
+    <div class="d-flex align-items-stretch">
+        <div class="card w-100">
+            <div class="card-body p-3">
+                <h5 class="card-title fw-semibold">Quick Links 🔥</h5>
+                <div class="table-responsive">
+                    <table class="table text-nowrap mb-0 align-middle">
+                        <tbody>
+                            <tr>
+                                <td class="border-bottom-0">
+                                    <a href="{% url 'add_question' %}" class="btn btn-outline-primary">Add Question</a>
+                                </td>
+                                <td class="border-bottom-0">
+                                    <a href="{% url 'set_pod' %}" class="btn btn-outline-secondary">Set General POD</a>
+                                </td>
+                                <td class="border-bottom-0">
+                                    <a href="{% url 'instructor_add_sheet' %}" class="btn btn-outline-warning">Add Sheet</a>
+                                </td>
+                                <td class="border-bottom-0">
+                                    <a href="{% url 'instructor_sheet' latest_sheet.slug %}" class="btn btn-outline-info">Open {{ latest_sheet.name }} Sheet</a>
+                                </td>
+                                <td class="border-bottom-0">
+                                    <a href="{% url 'question_requests' %}" class="btn btn-outline-indigo">Question Requests</a>
+                                </td>
+                            </tr>
+
+                            
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
 
         <div class="col-lg-4 d-flex align-items-stretch">
@@ -472,12 +505,12 @@ Administration -> Home
             </div>
         </div>
 
-        <!-- ================================ Last 3 sessions JOBS ============================ -->
+        <!-- ================================ QUICK LINKS ============================ -->
 
         <div class="col-lg-8 d-flex align-items-stretch">
             <div class="card w-100">
                 <div class="card-body p-4">
-                    <h5 class="card-title fw-semibold mb-4">Pending Task 🔥</h5>
+                    <h5 class="card-title fw-semibold mb-4">Quick Links 🔥</h5>
                     <div class="table-responsive">
                         <table class="table text-nowrap mb-0 align-middle">
                             <thead class=" fs-4">
